--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -1,6 +1,6 @@
 .right_bg{
     background: linear-gradient(171.42deg, rgba(218, 11, 78, 0.12) 5.76%, rgba(96, 147, 136, 0) 91%, rgba(96, 147, 136, 0) 91%);
-    /* width: 00px; */
+    /* width: 500px; */
      height: 600px;
   
   }
@@ -38,6 +38,17 @@
     font-size: 21px;
     
   
+  }
+
+  .btn11{
+    width: 221.41px;
+    height: 63.51px;
+    background: linear-gradient(180deg, #DA0B3D 0%, #E13C71 52.08%, #DA0B56 99.99%);
+  box-shadow: 0px 6px 24px #CF2E62;
+  border-radius: 11px;
+  font-family: 'Lato';
+  font-style: normal;
+  color: #FFFFFF;
   }
   .img_1{
     /* margin-left:-100px; */
@@ -97,14 +108,23 @@
      
     
     }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:500px;
+    }
   }
   @media only screen and (max-width: 1200px) and (min-width: 1025px) 
   {
+
+    /* .right_bg{
+      width:341px;
+    } */
     .btn2{
       width: 180px;
       /* margin-left:85px; */
       /* margin-bottom:10px; */
-      margin-left:250px;
+      margin-left:180px;
     
     }
   
@@ -113,11 +133,212 @@
       width: 180px;  
       margin-left:55px;
       /* margin-bottom:10px; */
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:280px;
+    }
+
+    .img_1{
+      /* margin-left:-100px; */
+      width:560px;
+      margin-left:-60px;
+      margin-top:80px;
+  
+    }
+    .img_2{
+      width:500px;
+      margin-left:-12px;
+      margin-top:50px;
+    }
+    
+    .img_3{
+      width:400px;
+      margin-left:100px;
+    }
+    .img_4{
+      width:450px;
+      margin-left:25px;
+    }
+    .img_5{
+      width:500px;
+      margin-left:50px;
+    }
+    .img_6{
+      width:560px;
+      margin-left:-100px;
+      margin-top:200px;
+    }
+  .img_7{
+    width:480px;
+    margin-left:80px;
+    margin-top:50px;
+  }
+    
+    
+  }
+
+  @media only screen and (max-width: 1024px) and (min-width: 992px) 
+{
+  .btn2{
+    width: 180px;
+    /* margin-left:85px; */
+    /* margin-bottom:10px; */
+    margin-left:150px;
+  
+  }
+
+  .btn3{
+    
+    width: 180px;  
+    margin-left:55px;
+    /* margin-bottom:10px; */
+  }
+  .btn11{
+    width: 100px;  
+    height:50px;
+    margin-left:280px;
+  }
+
+  .img_1{
+    /* margin-left:-100px; */
+    width:560px;
+    margin-left:-50px;
+    margin-top:80px;
+
+  }
+  .img_2{
+    width:500px;
+    margin-left:-12px;
+    margin-top:50px;
+  }
+  
+  .img_3{
+    width:400px;
+    margin-left:100px;
+  }
+  .img_4{
+    width:450px;
+    margin-left:25px;
+  }
+  .img_5{
+    width:500px;
+    margin-left:50px;
+  }
+  .img_6{
+    width:560px;
+    margin-left:-100px;
+    margin-top:200px;
+  }
+.img_7{
+  width:480px;
+  margin-left:80px;
+  margin-top:50px;
+}
+}
+  @media only screen and (max-width: 991px) and (min-width: 901px) 
+{
+  .right_bg{
+    display:none;
+    }
+  
+    .btn2{
+      width: 140px;
+      /* margin-left:85px; */
+      /* margin-bottom:10px; */
+      margin-left:280px;
+    
+    }
+  
+    .btn3{
+      
+      width: 140px;  
+      margin-left:180px;
+      /* margin-bottom:10px; */
      
     
     }
-  }
-  @media only screen and (max-width: 1024px) and (min-width: 769px) 
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:420px;
+    }
+    .img_1{
+      display:none;
+  
+    }
+    .img_2{
+      display:none;
+    }
+    
+    .img_3{
+      display:none;
+    }
+    .img_4{
+      display:none;
+    }
+    .img_5{
+      display:none;
+    }
+    .img_6{
+     display:none;
+    }
+  
+}
+
+  @media only screen and (max-width: 900px) and (min-width: 841px) 
+{
+  .right_bg{
+    display:none;
+    
+    }
+  
+    .btn2{
+      width: 140px;
+      /* margin-left:85px; */
+      /* margin-bottom:10px; */
+      margin-left:280px;
+    
+    }
+  
+    .btn3{
+      
+      width: 140px;  
+      margin-left:140px;
+      /* margin-bottom:10px; */
+     
+    
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:380px;
+    }
+    .img_1{
+      display:none;
+  
+    }
+    .img_2{
+      display:none;
+    }
+    
+    .img_3{
+      display:none;
+    }
+    .img_4{
+      display:none;
+    }
+    .img_5{
+      display:none;
+    }
+    .img_6{
+     display:none;
+    }
+  
+}
+
+  @media only screen and (max-width: 840px) and (min-width: 769px) 
   {
     .right_bg{
     display:none;
@@ -135,10 +356,15 @@
     .btn3{
       
       width: 140px;  
-      margin-left:40px;
+      margin-left:100px;
       /* margin-bottom:10px; */
      
     
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:340px;
     }
     .img_1{
       display:none;
@@ -164,7 +390,9 @@
   
     
   }
-  @media only screen and (max-width: 768px) and (min-width: 481px) 
+
+
+  @media only screen and (max-width: 768px) and (min-width: 650px) 
   {
     .right_bg{
       display:none;
@@ -172,20 +400,75 @@
     }
   
     .btn2{
-      /* width: 140px; */
+      width: 100px;
       /* margin-left:85px; */
       /* margin-bottom:10px; */
-      margin-left:220px;
+      margin-left:280px;
     
     }
   
     .btn3{
       
-      /* width: 140px;   */
-      margin-left:50px;
+      width: 100px;  
+      margin-left:100px;
       /* margin-bottom:10px; */
      
     
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:290px;
+    }
+    .img_1{
+      display:none;
+  
+    }
+    .img_2{
+      display:none;
+    }
+    
+    .img_3{
+      display:none;
+    }
+    .img_4{
+      display:none;
+    }
+    .img_5{
+      display:none;
+    }
+    .img_6{
+     display:none;
+    }
+  }
+
+  @media only screen and (max-width: 649px) and (min-width: 481px) 
+  {
+    .right_bg{
+      display:none;
+    
+    }
+  
+    .btn2{
+      width: 100px;
+      /* margin-left:85px; */
+      /* margin-bottom:10px; */
+      margin-left:180px;
+    
+    }
+  
+    .btn3{
+      
+      width: 100px;  
+      margin-left:80px;
+      /* margin-bottom:10px; */
+     
+    
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:180px;
     }
     .img_1{
       display:none;
@@ -210,7 +493,59 @@
   
   
   }
-  @media only screen and (max-width: 480px) and (min-width: 300px) 
+
+  @media only screen and (max-width: 480px) and (min-width: 401px) 
+{
+  .right_bg{
+    display:none;
+  
+  }
+
+  .btn2{
+    width: 100px;
+    height:50px;
+    /* margin-left:85px; */
+    /* margin-bottom:10px; */
+    margin-left:100px;
+  
+  }
+
+  .btn3{
+    
+    width: 100px;  
+    height:50px;
+    margin-left:40px;
+    /* margin-bottom:10px; */
+   
+  
+  }
+  .btn11{
+    width: 100px;  
+    height:50px;
+    margin-left:120px;
+  }
+  .img_1{
+    display:none;
+
+  }
+  .img_2{
+    display:none;
+  }
+  
+  .img_3{
+    display:none;
+  }
+  .img_4{
+    display:none;
+  }
+  .img_5{
+    display:none;
+  }
+  .img_6{
+   display:none;
+  }
+}
+  @media only screen and (max-width: 400px) and (min-width: 300px) 
   {
     .right_bg{
       display:none;
@@ -218,22 +553,27 @@
     }
   
     .btn2{
-      width: 140px;
+      width: 100px;
       height:50px;
       /* margin-left:85px; */
       /* margin-bottom:10px; */
-      margin-left:50px;
+      margin-left:10px;
     
     }
   
     .btn3{
       
-      width: 140px;  
+      width: 100px;  
       height:50px;
-      margin-left:15px;
+      margin-left:30px;
       /* margin-bottom:10px; */
      
     
+    }
+    .btn11{
+      width: 100px;  
+      height:50px;
+      margin-left:120px;
     }
     .img_1{
       display:none;
